# mallorn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/: lint.md
.claude/skills/git-worktree-manager/: SKILL.md  cleanup_worktrees.py  create_multiple_worktrees.py  create_worktree.py  list_worktrees.py  open_worktree.py  switch_worktree.sh
.claude/skills/lint-service/: lint-python.sh  lint-rust.sh  lint-typescript.sh
.claude/skills/rust-foundation-code-quality/: SKILL.md
.claude/skills/rust-foundation-error-handling/: SKILL.md
.claude/skills/rust-ml-candle-core/: skill.md
.claude/skills/rust-ml-huggingface-porting/: skill.md
.claude/skills/rust-observability-tracing/: SKILL.md
.claude/skills/security-scan-local/: check.py  gitleaks.py  run.py  semgrep.py  trivy.py
.claude/skills/skill-creator/: SKILL.md  create_complex_skill.py  create_skill.py  list_skills.py
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release.yml
crates/mallorn-candle/: Cargo.toml
crates/mallorn-candle/src/: delta.rs  device.rs  error.rs  lib.rs  neural.rs  sparse.rs
crates/mallorn-cli/: Cargo.toml
crates/mallorn-cli/src/: chain.rs  convert.rs  dict.rs  diff.rs  download.rs  fingerprint.rs  info.rs  main.rs  patch.rs  sign.rs  verify.rs
crates/mallorn-cli/tests/: integration_tests.rs
crates/mallorn-core/: Cargo.toml
crates/mallorn-core/benches/: compression.rs  diffpatch.rs  fingerprint.rs  parallel.rs  quantized_delta.rs  sparse.rs
crates/mallorn-core/src/: chain.rs  compression.rs  diff.rs  error.rs  fingerprint.rs  hash.rs  lib.rs  network.rs  network_async.rs  signature.rs  streaming.rs  traits.rs  types.rs
crates/mallorn-coreml/: Cargo.toml
crates/mallorn-coreml/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs
crates/mallorn-gguf/: Cargo.toml
crates/mallorn-gguf/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs  quantization.rs
crates/mallorn-lite/: Cargo.toml  build.rs  cbindgen.toml
crates/mallorn-lite/include/: mallorn.h
crates/mallorn-lite/src/: ffi.rs  format.rs  lib.rs  patcher.rs
crates/mallorn-lite/tests/: integration.rs
crates/mallorn-onnx/: Cargo.toml  build.rs
crates/mallorn-onnx/proto/: onnx.proto
crates/mallorn-onnx/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs
crates/mallorn-openvino/: Cargo.toml
crates/mallorn-openvino/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs
crates/mallorn-python/: Cargo.toml  README.md  pyproject.toml
crates/mallorn-python/python/mallorn/: __init__.py  __init__.pyi
crates/mallorn-python/src/: api.rs  lib.rs
crates/mallorn-safetensors/: Cargo.toml
crates/mallorn-safetensors/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs
crates/mallorn-tensorrt/: Cargo.toml
crates/mallorn-tensorrt/benches/: tensorrt.rs
crates/mallorn-tensorrt/src/: config.rs  differ.rs  format.rs  lib.rs  patcher.rs
crates/mallorn-tflite/: Cargo.toml
crates/mallorn-tflite/benches/: parsing.rs  real_models.rs
crates/mallorn-tflite/src/: differ.rs  format.rs  lib.rs  parser.rs  patcher.rs
crates/mallorn-tflite/tests/: compression_hypothesis.rs
crates/mallorn-wasm/: Cargo.toml
crates/mallorn-wasm/src/: compress.rs  diff.rs  error.rs  fingerprint.rs  lib.rs  patch.rs
docs/: book.toml
docs/src/: ARCHITECTURE.md  INTERFACES.md  METHODOLOGY.md  METRICS.md  README.md  RESEARCH.md  SCOPE.md  SPEC.md  STYLE_GUIDE.md  SUMMARY.md  TESTING.md  advanced.md  chains.md  cli.md  downloads.md  embedded.md  fingerprinting.md  python.md  quick-start.md  security.md
examples/esp32/: CMakeLists.txt  README.md  partitions.csv
examples/esp32/components/mallorn/: CMakeLists.txt
examples/esp32/components/mallorn/include/: mallorn.h
examples/esp32/main/: CMakeLists.txt  main.c  model_update.c  model_update.h
examples/nrf52/: Cargo.toml  README.md
examples/nrf52/.cargo/: config.toml
examples/nrf52/src/: main.c  main.rs
examples/python/: model_update.ipynb
examples/server/: README.md  patch_server.py
examples/stm32/: Makefile  README.md
examples/stm32/Core/Inc/: mallorn_config.h
examples/stm32/Core/Src/: main.c
examples/stm32/src/: flash_io.c  flash_io.h  main.c
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compress_decompress.rs  compression.rs  coreml_parser.rs  download_state.rs  gguf_parser.rs  openvino_parser.rs  patch_apply.rs  patch_deserialize_gguf.rs  patch_deserialize_onnx.rs  patch_deserialize_tflite.rs  safetensors_parser.rs  signed_patch.rs  streaming_patcher.rs  tensorrt_parser.rs  tflite_parser.rs
scripts/: download_test_models.sh
tests/fixtures/models/: .gitkeep
tests/fixtures/patches/: .gitkeep
