[package]
name = "mallorn-coreml"
version = "0.1.0"
edition = "2021"
description = "Apple CoreML format support for Mallorn delta updates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/mallorn"
keywords = ["coreml", "ml", "delta", "compression", "apple"]
categories = ["compression", "science"]

[dependencies]
mallorn-core = { path = "../mallorn-core" }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
