[package]
name = "mallorn-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ONNX format support for Mallorn edge model delta updates"

[dependencies]
mallorn-core = { workspace = true }

# Protobuf parsing
prost = "0.13"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Binary handling
byteorder = { workspace = true }

# Compression
zstd = { workspace = true }
lz4_flex = { workspace = true }

# Hashing and checksums
crc32fast = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Parallelism
rayon = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = { workspace = true }
