[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mallorn"
version = "0.4.0"
description = "Edge model delta updates for TFLite, GGUF, and ONNX models"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "tflite", "gguf", "onnx", "delta", "ota", "embedded"]

[project.urls]
Repository = "https://github.com/gabedavis/mallorn"
Documentation = "https://gabedavis.github.io/mallorn"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mallorn"
