[package]
name = "mallorn-safetensors"
version.workspace = true
edition.workspace = true
description = "SafeTensors format support for Mallorn delta updates"
license.workspace = true
repository.workspace = true

[dependencies]
mallorn-core = { workspace = true }
byteorder = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
