[package]
name = "mallorn-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Mallorn edge model delta updates"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

# Core mallorn functionality (subset for WASM)
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lz4_flex = { workspace = true }
thiserror = { workspace = true }

# Pure-Rust zstd decoder (WASM-compatible)
ruzstd = { workspace = true }

# WASM-specific
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disable wasm-opt to avoid bulk memory feature issues

[profile.release]
opt-level = "s"
lto = true
